# AzLang

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  Package.code  Readme.md  cap.az  example.az  parse_union_type.rs  program.  program1.az  readme.md
compiler/: Cargo.toml
compiler/src/: builder.rs  errors.rs  helpers.rs  lib.rs  macros.rs
compiler/src/cleaner/: clean.rs
compiler/src/methods/: hello_world.c  hello_world.zig  input.zig  mod.rs
compiler/src/parser/: ast.rs  decl.rs  mod.rs
compiler/src/tests/: compiler_test.rs  mod.rs
compiler/src/transpiler/: decl.rs  helper.rs  mod.rs  struct_def.rs  transpile.rs  union_def.rs  zigbuiltin_functions.rs
compiler/src/transpiler/builtin/: min_max.rs  mod.rs  print.rs  sum.rs
compiler/src/transpiler/codegen/: main_body.rs  mod.rs  top_level.rs  utils_fn.rs
compiler/src/transpiler/declaration/: mod.rs  value_decl.rs  variable_decl.rs
compiler/src/transpiler/definition/: function_def.rs  mod.rs  (+2 more)
compiler/src/transpiler_clone/: helper.rs  mod.rs  transpile.rs
interpreter/: Cargo.toml
interpreter/src/: errors.rs  lib.rs
interpreter/src/parser/: ast.rs  binary_op.rs  builtin.rs  condition.rs  decl.rs  enum.rs  expressions.rs  function.rs  helpers.rs  identifier.rs  list.rs  loop.rs  match.rs  method.rs  mod.rs  struct_init.rs  structs.rs  template.rs  types.rs  union.rs
interpreter/src/runner/: binary_op.rs  eval.rs  function_call.rs  helpers.rs  mod.rs  old.rs  runner.rs
interpreter/src/validator/: errors.rs  helper.rs  mod.rs  validate.rs
interpreter/tests/features/: mod.rs
(+312 files in other folders)
