[workspace]
members = [
    "crates/logging",
    "crates/cli",
    "interpreter",
    "compiler",
]

[package]
name = "AzLang"
version = "0.1.1"
edition = "2024"



[dependencies]
logging = { path = "./crates/logging" }
cli = { path = "./crates/cli"}
interpreter = { path = "./interpreter"}
compiler = { path = "./compiler"}
