
[package]
name = "compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
file_system = { path = "../crates/file_system" }
parser = { path = "../crates/parser" }
tokenizer = { path = "../crates/tokenizer" }
validator = { path = "../crates/validator" }
transpiler = { path = "../crates/transpiler" }
