[package]
name = "interpreter"
version = "0.1.0"
edition = "2024"

[dependencies]
file_system = { path = "../crates/file_system/" }
logging = { path = "../crates/logging/" }
peekmore = "1.3.0"
parser = { path = "../crates/parser/" }
tokenizer = { path = "../crates/tokenizer/" }
validator = { path = "../crates/validator/" }
